# cloud-volume-actions

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: SECRETS.md  WORKFLOW.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
create-or-restore-volume/: action.yml
create-or-restore-volume/scripts/aws/: provision.py  teardown.py
create-or-restore-volume/scripts/exoscale/: provision.py  teardown.py
reformat/: Dockerfile  docker-compose.yml  reformat.sh
snapshot-and-destroy-volume/: action.yml
snapshot-and-destroy-volume/helpers/: __init__.py
snapshot-and-destroy-volume/requirements/: exoscale
snapshot-and-destroy-volume/scripts/aws/: provision.py
snapshot-and-destroy-volume/scripts/exoscale/: teardown.py
snapshot-volume/: action.yml
snapshot-volume/scripts/exoscale/: snapshot.py
